--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     </header>
 
     <main>
-      <section class="game-board" id="gameBoard">
-        <!-- Cards sẽ được JS render -->
-      </section>
+      <section class="game-board" id="gameBoard"></section>
     </main>
 
     <footer>
